[package]
name = "header_accumulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decoder = { git = "https://github.com/semiotic-ai/flat-files-decoder.git", version = "0.1.0", branch = "skip_first_block_checks" }
ethportal-api = "0.2.2"
tree_hash = "0.4.0"
revm-primitives = "=1.1.2"
protobuf = "=3.2.0"
primitive-types = "0.10.1"
trin-validation = { git = "https://github.com/ethereum/trin.git", version = "0.1.0" }
rlp = "0.5.2"
serde_json = "1.0.108"
clap = { version = "4.4.10", features = ["derive"] }

[dev-dependencies]

