[package]
name = "header_accumulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethportal-api = {git = "https://github.com/ethereum/trin.git", version = "0.2.2"}
tree_hash = "0.5.2"
revm-primitives = "=1.1.2"
protobuf = "=3.2.0"
trin-validation = { git = "https://github.com/ethereum/trin.git", version = "0.1.0" }
rlp = "0.5.2"
serde_json = "1.0.108"
clap = { version = "4.4.10", features = ["derive"] }
primitive-types = "=0.12.2"
ethereum-types = "=0.14.1"
log = "0.4.20"
env_logger = "0.10.1"
protobuf-json-mapping = "3.2.0"
bincode = "1.3.3"
serde = "1.0.196"
base64 = "0.21.7"
sf-protos = { git = "https://github.com/semiotic-ai/sf-protos.git", version = "0.1.0" }


[dev-dependencies]
tempfile = "3.0"
decoder = { git = "https://github.com/semiotic-ai/flat-files-decoder.git", tag = "v0.2.0"}


[profile.release]
codegen-units = 1
lto = false
